# MacroPadPico

./: CMakeLists.txt  README.md  flash_service.cpp  flash_service.h  main.cpp  settings.cpp  settings.h
keyboard_src/: keyboard.cpp  keyboard.h  report.cpp  report.h
serial_src/: cdc_utils.h  message.h  serial_dispatcher.cpp  serial_dispatcher.h
tinyusb_src/: tusb_config.h  usb_descriptors.cpp  usb_descriptors.h
